--- a/src/main/webapp/hello.xhtml
+++ b/src/main/webapp/hello.xhtml
@@ -1,18 +1,29 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html">
-    <h:head>
-        <title>Magister</title>
-    </h:head>
-    <h:body>
-        <h:form id="helloFrm">
-            <h:outputText value="#{indexBean.mensagem}" />
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+    <ui:composition template="/layout.xhtml">
+        <ui:define name="conteudo">
             
-            <br />
+            <h:form id="helloFrm">
+                <h2>Bem vindo!</h2>
+
+                <br />
+
+                <h:form id="helloFrm">
+                    <h:panelGrid columns="2">
+                        <h:outputLabel value="Nome: " />
+                        <h:outputText value="#{indexBean.nome}" />
+
+                        <h:outputLabel value="Email: " />
+                        <h:outputText value="#{indexBean.email}" />
+                    </h:panelGrid>
+                    <h:commandButton id="helloBtn" value="Voltar" action="#{indexBean.goToIndex()}" />
+                </h:form>
+            </h:form>
             
-            <h:commandButton id="helloBtn" value="Voltar" action="#{indexBean.goToIndex()}" />
-        </h:form>
-    </h:body>
+        </ui:define>
+    </ui:composition>
 </html>
 
