--- a/src/main/webapp/header.xhtml
+++ b/src/main/webapp/header.xhtml
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html">
     <h:body>
-        <h6>Magister - Copyright @ 3º Computação Fafiman</h6>
+        <h2>Cabeçalho</h2>
     </h:body>
 </html>
 
