--- a/src/main/webapp/menu.xhtml
+++ b/src/main/webapp/menu.xhtml
@@ -3,7 +3,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html">
     <h:body>
-        <h6>Magister - Copyright @ 3º Computação Fafiman</h6>
+        <ul>
+            <li>Link #01</li>
+            <li>Link #02</li>
+            <li>Link #03</li>
+            <li>Link #04</li>
+        </ul>
     </h:body>
 </html>
 
