--- a/src/main/webapp/template.xhtml
+++ b/src/main/webapp/template.xhtml
@@ -3,9 +3,15 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
-    <ui:composition template="/layout.xhtml">
-        <ui:define name="readable">
-            <h3>Bem vindo ao Magister!</h3>
-        </ui:define>
-    </ui:composition>
+    <h:head>
+        <title><ui:insert name="title">Magister</ui:insert></title>
+    </h:head>
+    <h:body>
+        <ui:include src="/header.xhtml" />
+        <hr />
+        <ui:insert name="content" />
+        <hr />
+        <ui:include src="/footer.xhtml" />
+    </h:body>
 </html>
+
