--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -5,6 +5,7 @@
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
     <ui:composition template="/layout.xhtml">
         <ui:define name="readable">
+            <h1>Index.xhtml</h1>
             <h3>Bem vindo ao Magister!</h3>
         </ui:define>
     </ui:composition>
