--- a/src/main/webapp/template.xhtml
+++ b/src/main/webapp/template.xhtml
@@ -4,14 +4,29 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
     <h:head>
-        <title><ui:insert name="title">Magister</ui:insert></title>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <h:outputStylesheet library="webjars" name="bootstrap/4.1.3/dist/css/bootstrap.min.css" />
+        <h:outputStylesheet library="webjars" name="font-awesome/4.7.0/css/font-awesome.min.css" />
+        <h:outputStylesheet name="css/style.css" />
+        <title>
+            <ui:insert name="title">Magister</ui:insert>
+        </title>
     </h:head>
     <h:body>
+        <!--<h6>template.xhtml antes do header</h6>-->
         <ui:include src="/header.xhtml" />
+        <!--<h6>template.xhtml depois do header</h6>-->
         <hr />
         <ui:insert name="content" />
         <hr />
+        <!--<h6>template.xhtml antes do footer</h6>-->
         <ui:include src="/footer.xhtml" />
+        <!--<h6>template.xhtml depois do footer</h6>-->
+        
+        <h:outputScript library="webjars" name="jquery/3.3.1/dist/jquery.slim.min.js" />
+        <h:outputScript library="webjars" name="popper.js/1.14.3/dist/umd/popper.min.js" />
+        <h:outputScript library="webjars" name="bootstrap/4.1.3/dist/js/bootstrap.min.js" />
     </h:body>
 </html>
 
