Barra superior de navegação

--- a/src/main/webapp/header.xhtml
+++ b/src/main/webapp/header.xhtml
@@ -2,10 +2,39 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:a="http://xmlns.jcp.org/jsf/passthrough"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
     <h:body>
         <ui:composition>
-            <h2>Cabeçalho</h2>
+            <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+                <a class="navbar-brand" href="#">Magister</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample04" aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="collapse navbar-collapse" id="navbarsExample04">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">About</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="https://example.com" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Subjects</a>
+                            <div class="dropdown-menu" aria-labelledby="dropdown04">
+                                <a class="dropdown-item" href="#">Java</a>
+                                <a class="dropdown-item" href="#">JSF</a>
+                                <a class="dropdown-item" href="#">Iot</a>
+                            </div>
+                        </li>
+                    </ul>
+                    <h:form id="searchFrm" class="form-inline my-2 my-md-0">
+                        <h:inputText class="form-control mr-sm-2" a:placeholder="Search" value="#{searchBean.search}" />
+                        <h:commandButton class="btn btn-outline-success my-2 my-sm-0" value="Search" action="#{searchBean.doSearch()}" />
+                    </h:form>
+                </div>
+            </nav>
         </ui:composition>
     </h:body>
 </html>
